[backend] Standartise PaymentMethodService
- there were some inconsistencies in payment method service when
  dto concept was introduced; they have to be cleared before
  moving forward