@@ -2,7 +2,6 @@ package org.roko.erp.backend.services;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.roko.erp.backend.model.PaymentMethod;
 import org.roko.erp.backend.repositories.PaymentMethodRepository;
@@ -15,10 +14,12 @@ import org.springframework.stereotype.Component;
 public class PaymentMethodServiceImpl implements PaymentMethodService {
 
     private PaymentMethodRepository repo;
+    private BankAccountService bankAccountSvc;
 
     @Autowired
-    public PaymentMethodServiceImpl(PaymentMethodRepository repo) {
+    public PaymentMethodServiceImpl(PaymentMethodRepository repo, BankAccountService bankAccountSvc) {
         this.repo = repo;
+        this.bankAccountSvc = bankAccountSvc;
     }
 
     @Override
@@ -54,28 +55,13 @@ public class PaymentMethodServiceImpl implements PaymentMethodService {
     }
 
     @Override
-    public PaymentMethodDTO getDTO(String code) {
-        PaymentMethod paymentMethod = get(code);
-
-        if (paymentMethod == null) {
-            return null;
-        }
-
-        return toDto(paymentMethod);
+    public List<PaymentMethod> list() {
+        return repo.findAll();
     }
 
     @Override
-    public List<PaymentMethodDTO> list() {
-        return repo.findAll().stream()
-            .map(x -> toDto(x))
-            .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<PaymentMethodDTO> list(int page) {
-        return repo.findAll(PageRequest.of(page - 1, Constants.RECORDS_PER_PAGE)).toList().stream()
-            .map(x -> toDto(x))
-            .collect(Collectors.toList());
+    public List<PaymentMethod> list(int page) {
+        return repo.findAll(PageRequest.of(page - 1, Constants.RECORDS_PER_PAGE)).toList();
     }
 
     @Override
@@ -83,19 +69,30 @@ public class PaymentMethodServiceImpl implements PaymentMethodService {
         return new Long(repo.count()).intValue();
     }
 
+    @Override
+    public PaymentMethod fromDTO(PaymentMethodDTO dto) {
+        PaymentMethod paymentMethod = new PaymentMethod();
+        paymentMethod.setCode(dto.getCode());
+        paymentMethod.setName(dto.getName());
+        paymentMethod.setBankAccount(bankAccountSvc.get(dto.getBankAccountCode()));
+        return paymentMethod;
+    }
+
+    @Override
+    public PaymentMethodDTO toDTO(PaymentMethod paymentMethod) {
+        PaymentMethodDTO dto = new PaymentMethodDTO();
+        dto.setCode(paymentMethod.getCode());
+        dto.setName(paymentMethod.getName());
+        if (paymentMethod.getBankAccount() != null) {
+            dto.setBankAccountCode(paymentMethod.getBankAccount().getCode());
+            dto.setBankAccountName(paymentMethod.getBankAccount().getName());    
+        }
+        return dto;
+    }
+
     private void transferFields(PaymentMethod source, PaymentMethod target) {
         target.setName(source.getName());
         target.setBankAccount(source.getBankAccount());
     }
 
-    private PaymentMethodDTO toDto(PaymentMethod paymentMethod){
-        PaymentMethodDTO dto = new PaymentMethodDTO();
-        dto.setCode(paymentMethod.getCode());
-        dto.setName(paymentMethod.getName());
-        if (paymentMethod.getBankAccount() != null){
-            dto.setBankAccountCode(paymentMethod.getBankAccount().getCode());
-            dto.setBankAccountName(paymentMethod.getBankAccount().getName());
-        }
-        return dto;
-    }
 }
